--- a/QCon Android/src/main/res/values/play_store_themes.xml
+++ b/QCon Android/src/main/res/values/play_store_themes.xml
@@ -2,11 +2,7 @@
 <resources>
 
     <style name="Theme.QConAndroid.PlayStore" parent="@android:style/Theme.Holo.Light.DarkActionBar">
-        <item name="android:actionBarStyle">@style/play_store_action_bar_style</item>
-    </style>
-
-    <style name="play_store_action_bar_style" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
-        <item name="android:background">?play_color</item>
+        <item name="android:actionBarStyle">@style/Widget.QConAndroid.Play.ActionBar</item>
     </style>
 
 
